[gd_scene load_steps=6 format=3 uid="uid://b8wqxa30xfo8m"]

[ext_resource type="Script" path="res://Magic/MagicSettings.gd" id="1_ahfbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0w6v"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrwwd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_axwco"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wo8ml"]

[node name="MagicSettings" type="Control" node_paths=PackedStringArray("Title", "Size", "Power", "Stealth", "Name", "Keybind")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ahfbw")
Title = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Title")
Size = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Size_CastingSpeed")
Power = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Power_ProjectileSpeed")
Stealth = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Amount_Supreme")
Name = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Renaming")
Keybind = NodePath("ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Keybind")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = -13.0
offset_right = 1164.0
offset_bottom = 665.0
color = Color(0.207843, 0.207843, 0.207843, 0.458824)

[node name="PanelContainer" type="PanelContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -278.0
offset_right = 438.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n0w6v")

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect2/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_horizontal_custom_step = 1199.13

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Action List" type="VBoxContainer" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Placeholder Text Here"

[node name="Renaming" type="TextEdit" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Size_CastingSpeed" type="HSlider" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_hrwwd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_axwco")
min_value = -50.0
max_value = 50.0

[node name="Size_CastingSpeed2" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Size_CastingSpeed"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
offset_top = -12.5
offset_right = 45.0
offset_bottom = 27.5
theme_override_font_sizes/font_size = 20
text = "Attack Speed
"

[node name="Size_CastingSpeed3" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Size_CastingSpeed"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -32.5
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Size"

[node name="Power_ProjectileSpeed" type="HSlider" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_hrwwd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_axwco")
min_value = -50.0
max_value = 50.0

[node name="Power_ProjectileSpeed2" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Power_ProjectileSpeed"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
offset_top = -12.5
offset_right = 65.0
offset_bottom = 27.5
theme_override_font_sizes/font_size = 20
text = "Projectile Speed
"

[node name="Power_ProjectileSpeed3" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Power_ProjectileSpeed"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -32.5
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Power
"

[node name="Amount_Supreme" type="HSlider" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_wo8ml")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_axwco")
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="Amount_Supreme2" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Amount_Supreme"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
offset_top = -12.5
offset_right = 73.0
offset_bottom = 27.5
theme_override_font_sizes/font_size = 20
text = "Amount
"

[node name="Amount_Supreme3" type="Label" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Amount_Supreme"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_top = -12.5
offset_bottom = 27.5
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Supreme"

[node name="Keybind" type="Button" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Deletion" type="Button" parent="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Remove"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 58.0
offset_right = 230.0
offset_bottom = 89.0
text = "GTFO"

[connection signal="pressed" from="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Keybind" to="." method="_on_keybind_pressed"]
[connection signal="pressed" from="ColorRect2/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/Action List/Deletion" to="." method="_on_deletion_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
